# CellCDecon

./: .gitignore  CMakeLists.txt  CellCDecon  CellCDecon.cpp  CellCDecon.h  CellCMain.cpp  Makefile  README.md  README.txt  README.txt~
include/: CellCDecon.h  CellCDeconIO.h
src/: CellCDecon.cpp  CellCDeconIO.cpp  main.cpp
test/: CMakeLists.txt  Makefile  test_cellc  test_cellc.cc  test_cellc.h
test/data/samples/: R_output.log.txt  R_output.probelog.txt  R_output.samplelog.txt  R_output.sampleprobelog.txt  testbeta.txt  testbeta.txt.cellcomp  testbeta.txt.means
test/unit/: test_cellc.cpp  test_cellc.h  test_cellc_utils.cpp
tools/analysis/: evaluate_results.py
tools/data_generation/: generate_test_data.py
tools/scripts/: run_simulation.sh
